--- a/blog.html
+++ b/blog.html
@@ -44,32 +44,49 @@
         <article class="blog">
           <header>
             <!-- blog post number one here: -->
-            <h4>Drowned Towns</h4>
-            <h5>20/08/2020</h5>
+            <h4>Letters from the battlefield</h4>
+            <h5>08/09/2020</h5>
           </header>
-          <p>There are a number of drowned towns in the UK. ‘Drowned’ is the term given to towns that have been
-            flooded to form a reservoir. Historically, there’s often controversy surrounding the drowning of a
-            village. There’s a need for water in an area, and a well-placed valley to fill. But there’s a population
-            of people who have built their lives there. They’re in the way. A lot of the town drownings in the UK
-            happened so long ago that there aren’t many people still bitter. </p>
+          <p>Today I read ‘Letters from the battlefield’. It’s a short story by Brad Phillips
+            in his book Essays and Fictions. ‘Letters from the battlefield’ confronts you with
+            your mortality. It made me think about the fact that I might die not on my own terms.
+            Worse than that, someone I love will die before I’m ready for it. I might miss the
+            opportunity to say something nice to them, or to let them in on some truth. </p>
 
-          <p>I’ve been interested in drowned towns since I used to sail on Rutland Water when I was a child. It’s
-            a reservoir northwest of Peterborough, among the largest manmade lakes in Europe. To make Rutland Water
-            the towns of Nether Hambleton and Middle Hambleton were first demolished, then flooded. I didn’t know
-            they had been demolished when I sailed on top of them. I thought that deep under the water they were
-            intact, dormant. I didn’t really even understand that the flooding of the town wasn’t some freak accident.
-            I pictured water crashing through the village from an unknown source, people fleeing.  </p>
+            <p>I’m helping someone write a cookbook for carers of the elderly, so I have to do
+              all this research on people coming to the end of their lives and no longer wanting
+              to eat. You’re supposed to lace their food with extra fat and sugar so they get the
+              calories they need to stay alive. If you’re making someone pasta, put a knob of butter
+              in the pot after draining. Your tastebuds weaken as you grow old. Add parsnips to carrot
+              cake so they can taste the sweetness while getting essential nutrients. </p>
 
-            <p>There was a rumour that the anchors of rescue boats would sometimes catch on a church spire under the
-              water. In my head, I saw a dilapidated building with its tower thrust towards the surface. Church benches
-              suspended inside. Segments taken out of it by anchors over the years. The reality is that there was only
-              one church in Nether Hambleton and it still exists above the water.  </p>
+              <p>I could try writing letters from the battlefield. Letters for people to read
+                after I’ve died. But there’s no way to be sure that the letters would survive.
+                With the rate that technology progresses they’d be another thing lost to the internet.
+                If I wrote them on paper they’re going to get lost in the world, or someone
+                could find them and read them before I’m dead. </p>
 
-            <p>I would spend hours sailing, daydreaming about the town below. Rooms with furniture floating inside.
-              Fish swimming through the streets, in and out of windows. Street signs directing waterlogged cars.
-              It scared me to fall into the water. I thought that should our boat capsize, the rigging may snag on
-              a chimney. I imagined a drowned resident pulling me down, antagonised by our enjoyment of the water
-              above them.</p>
+                <p> When you age there are a lot of things that can cause you to lose interest
+                  in food. Dementia is a big one. If you suffer from dementia you can forget how
+                  to eat. Someone can shovel food into your mouth and you won’t know how to chew
+                  or swallow it. The food will sit there, mush on your tongue. You might forget
+                  to eat or forget you’ve eaten, or forget what you like to eat. Some people forget
+                  they’re lifelong vegetarians. </p>
+
+                  <p> Perhaps a letter would be some comfort to people if I get dementia. A reminder
+                    of the person who used to be around, before they forgot. I’m twenty-five now though.
+                    If this were to happen it’s going to be in fifty or so years. In the year 2070
+                    I might have dementia, or I might be dead. Someone might be feeding me butter. </p>
+
+                    If I were to write a letter from the battlefield now I don’t know who
+                    I’d write it to. It’s safe to assume my parents will have died by 2070.
+                    As a twenty-five year old, I’m not confident the people I like and love
+                    now will be the people I like and love in fifty years. I could pour hours
+                    into this letter and the person it’s for will have forgotten my name by then. </p>
+
+                    <p> Before now I used to worry about ageing in the context of reaching thirty
+                      and feeling as though I had accomplished very little. But now I’ve found
+                      many more years to worry about. </p>
 
         </article>
       </div> <!-- end blog-post -->
@@ -83,6 +100,7 @@
                 <li><a href="blog1.html"> Cinnamon Buns </a></li>
                 <li><a href="blog2.html"> Calathea </a></li>
                 <li><a href="blog3.html"> The McFlurry: A History</a></li>
+                <li><a href="blog4.html"> Drowned Towns</a></li>
               </ul>
             </div> <!-- end links -->
           </div> <!-- end container -->
