--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
             <h5>08/09/2020</h5>
           </header>
           <p>Today I read ‘Letters from the battlefield’. It’s a short story by Brad Phillips
-            in his book Essays and Fictions. ‘Letters from the battlefield’ confronts you with
+            in his book <i>Essays and Fictions</i>. ‘Letters from the battlefield’ confronts you with
             your mortality. It made me think about the fact that I might die not on my own terms.
             Worse than that, someone I love will die before I’m ready for it. I might miss the
             opportunity to say something nice to them, or to let them in on some truth. </p>
