--- a/blog.html
+++ b/blog.html
@@ -76,9 +76,10 @@
                   <p> Perhaps a letter would be some comfort to people if I get dementia. A reminder
                     of the person who used to be around, before they forgot. I’m twenty-five now though.
                     If this were to happen it’s going to be in fifty or so years. In the year 2070
-                    I might have dementia, or I might be dead. Someone might be feeding me butter. </p>
+                    I might have dementia, or I might be dead. Someone might be feeding me buttered
+                    pasta and parsnip carrot cake, manipulating my jaw so my teeth chew it up.  </p>
 
-                    If I were to write a letter from the battlefield now I don’t know who
+                    <p> If I were to write a letter from the battlefield now I don’t know who
                     I’d write it to. It’s safe to assume my parents will have died by 2070.
                     As a twenty-five year old, I’m not confident the people I like and love
                     now will be the people I like and love in fifty years. I could pour hours
