--- a/blog3.html
+++ b/blog3.html
@@ -59,7 +59,7 @@
             the topping into the ice cream is called flurrying. It is an uncomfortable spoon to hold and
             eat from. In West Quay McDonalds they don’t use a machine to flurry the McFlurry. I’ve stood
             in front of the counter and watched, no machine and no flurrying of any kind. Just uncomfortable
-            square spoons to mix with yourself. In Australia and New Zealand they took away the flying
+            square spoons to mix with yourself. In Australia and New Zealand they took away the flurrying
             machines altogether, instead their McFlurries are ‘hand stirred – with love – by our crew.’
             They got rid of the square spoons in favour of regular looking spoons. </p>
 
